--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -4,23 +4,23 @@
     url = "/"
     weight = 1
 
-# [[main]]
-#     identifier = "posts"
-#     name = "Posts"
-#     url = "/posts"
-#     weight = 2
+#[[main]]
+#    identifier = "posts"
+#    name = "Posts"
+#    url = "/posts"
+#    weight = 2
 #
-# [[main]]
-#     identifier = "categories"
-#     name = "Categories"
-#     url = "/categories"
-#     weight = 3
-#
-# [[main]]
-#     identifier = "resume"
-#     name = "Resume"
-#     url = "/resume"
-#     weight = 4
+#[[main]]
+#    identifier = "categories"
+#    name = "Categories"
+#    url = "/categories"
+#    weight = 3
+
+[[main]]
+    identifier = "resume"
+    name = "Resume"
+    url = "/resume"
+    weight = 4
 
 # Social Media Configuration
 
