--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "My personal website.",
   "main": "index.js",
   "scripts": {
+    "lint": "prettier **/*.html i18n/* data/* **/*.md --check",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
     "cssnano": "^5.1.14",
     "postcss": "^8.4.23",
     "postcss-cli": "^10.1.0",
+    "prettier": "^3.3.2",
     "tailwindcss": "^3.3.2"
   }
 }
