--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -6,11 +6,11 @@ title = 'Lowkey Hugo'
 enableRobotsTXT = true
 
 # List Config
-summaryLength= 15
+summaryLength = 15
 paginate = 5
 
 [markup.highlight]
-      codeFences = false
+      codeFences = true
       guessSyntax = false
       hl_Lines = ""
       lineNoStart = 1
