--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
   "author": "Jean-Brice Gachot",
   "license": "MIT",
   "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "cssnano": "^7.0.4",
-    "postcss": "^8.4.39",
-    "postcss-cli": "^11.0.0",
+    "@tailwindcss/cli": "^4.0.0-alpha.17",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^4.0.0-alpha.17"
   }
 }
