--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@tailwindcss/cli": "^4.0.0-alpha.17",
     "prettier": "^3.3.3",
+    "prettier-plugin-go-template": "^0.0.15",
     "tailwindcss": "^4.0.0-alpha.17"
   }
 }
