--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "author": "Jean-Brice Gachot",
   "license": "MIT",
   "devDependencies": {
-    "@tailwindcss/cli": "^4.0.0-alpha.17",
+    "@tailwindcss/cli": "^4.0.0-alpha.19",
     "prettier": "^3.3.3",
-    "prettier-plugin-go-template": "^0.0.15",
-    "tailwindcss": "^4.0.0-alpha.17"
+    "prettier-plugin-go-template": "^0.0.15"
+  },
+  "dependencies": {
+    "tailwindcss": "^4.0.0-alpha.19"
   }
 }
