--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -7,7 +7,6 @@ enableRobotsTXT = true
 
 # List Config
 summaryLength = 15
-paginate = 5
 
 [markup.highlight]
 codeFences = true
@@ -18,6 +17,9 @@ lineNos = false
 lineNumbersInTable = false
 tabWidth = 4
 noClasses = false
+
+[pagination]
+pagerSize = 5
 
 [taxonomies]
 category = 'categories'
