--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "author": "Jean-Brice Gachot",
   "license": "MIT",
   "devDependencies": {
-    "@tailwindcss/cli": "^4.0.0-beta.4",
-    "prettier": "^3.4.1",
+    "@tailwindcss/cli": "^4.0.12",
+    "prettier": "^3.5.3",
     "prettier-plugin-go-template": "^0.0.15"
   },
   "dependencies": {
-    "tailwindcss": "^4.0.0-beta.4"
+    "tailwindcss": "^4.0.12"
   }
 }
